--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,14 +1,14 @@
-{% extends "account/base.html" %}
+{% extends 'account/base.html' %}
 
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_title %}{% trans 'Change Password' %}{% endblock %}
 
 {% block content %}
 <div class="m-3 m-lg-5">
 	<div class="text-center mt-4">
-		<h1 class="h3">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+		<h1 class="h3">{% if token_fail %}{% trans 'Bad Token' %}{% else %}{% trans 'Change Password' %}{% endif %}</h1>
 		{% if token_fail %}
 			<p class="text-black-50">
 					{% url 'account_reset_password' as passwd_reset_url %}
