--- a/templates/users/me.html
+++ b/templates/users/me.html
@@ -1,20 +1,33 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 {% load crispy_forms_filters %}
 {% load i18n %}
 
-{% block title %}{% trans "Avatar" %}{% endblock title %}
+{% block title %}{% trans 'Avatar' %}{% endblock title %}
 {% block main %}
   {{ block.super }}
-  <div class="bg-white">
-  {% if request.user.avatar %}
-    <img class="rounded-circle w-100" alt="{% trans 'Avatar' %}" src="{{ request.user.avatar.url }}" />
-  {% else %}
-    <i class="bi bi-person-circle ms-5" style="line-height: 33px"></i>
-  {% endif %}
-	<form enctype="multipart/form-data" method="POST" action="{% url 'users:me' %}">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">{% trans 'Change avatar' %}</button>
-  </form>
+  <header style="height: 60px; margin-bottom: 16px" class="d-flex align-items-center justify-content-center bg-white">
+    <h1 style="font-size: 25px; line-height: 25px">{% trans 'Profile photo' %}</h1>
+  </header>
+  <div class="bg-white rounded-2 d-flex" style="padding: 30px">
+    <div style="height: 238px; width: 238px; margin-right: 90px" class="flex-shrink-0 d-flex align-items-center">
+      {% if request.user.avatar %}
+        <img class="rounded-circle w-100" alt="{% trans 'Avatar' %}" src="{{ request.user.avatar.url }}" />
+      {% else %}
+        <div class="flex-grow-1 h-100 d-flex align-items-center justify-content-center rounded-circle" style="background: #f0f0f0; color: #b3b3b3; font-size: 100px">
+          <i class="bi bi-camera-fill"></i>
+        </div>
+      {% endif %}
+    </div>
+
+    <div style="line-height: 42px; font-size: 17px">
+      Вы можете загрузить изображение в формате JPG, GIF или PNG.<br />
+      Если у вас возникают проблемы с загрузкой, попробуйте выбрать фотографию меньшего размера.
+
+      <form enctype="multipart/form-data" method="POST" action="{% url 'users:me' %}">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-primary">{% trans 'Change avatar' %}</button>
+      </form>
+    </div>
   </div>
 {% endblock main %}
