--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -4,7 +4,7 @@
 <div class="bg-white fixed-top d-flex align-items-center" style="font-size: 16px; height: 83px; border-bottom: 2px solid #757575">
   {% block topbar %}
     {% block site_brand %}<a style="height: 80px" href="{% url 'index' %}">
-      <img height="80px" src="{% static 'logo.png' %}" alt="{% trans 'Logo' %}">
+      <img height="80" src="{% static 'logo.png' %}" alt="{% trans 'Logo' %}">
     </a>{% endblock site_brand %}
 
     <form style="margin-left: 172px; position: relative">
@@ -15,7 +15,7 @@
     </form>
 
     {% block account_bar %}
-      <div class="d-flex ms-auto">
+      <div class="d-flex ms-auto" style="margin-right: 16px">
         {% if request.user.is_authenticated %}
           <a class="d-flex" style="gap: 14px; text-decoration: none; line-height: 35px; color: black; margin-right: 14px"
               href="{% url 'users:me' %}">
@@ -24,13 +24,13 @@
             {% include 'users/_avatar.html' with user=request.user %}
             {{ request.user.username }}
           </a>
-          <a style="display: inline-block; width: 153px; text-align: center; text-decoration: none; line-height: 35px; color: white; border-radius: 5px; background: #2659C2"
-             href="{% url 'account_logout' %}">{% trans "Log out" %}</a>
+          <a style="display: inline-block; width: 153px; text-align: center; text-decoration: none; line-height: 35px; color: #2659C2; border-radius: 5px; border: solid 1px #2659C2"
+             href="{% url 'account_logout' %}">{% trans 'Exit' %}</a>
         {% else %}
           <a style="display: inline-block; margin-right: 16px; width: 153px; text-align: center; text-decoration: none; line-height: 35px; color: #2659C2; border-radius: 5px; border: solid 1px #2659C2"
-             href="{% url 'account_login' %}">{% trans "Log in" %}</a>
-          <a style="display: inline-block;margin-right: 16px; width: 153px; text-align: center; text-decoration: none; line-height: 35px; color: white; border-radius: 5px; background: #2659C2"
-             href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
+             href="{% url 'account_login' %}">{% trans 'Log in' %}</a>
+          <a style="display: inline-block; width: 153px; text-align: center; text-decoration: none; line-height: 35px; color: white; border-radius: 5px; background: #2659C2"
+             href="{% url 'account_signup' %}">{% trans 'Sign Up' %}</a>
         {% endif %}
       </div>
     {% endblock account_bar %}
