--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 {% block head %}{{ block.super }}{% block extra_head %}{% endblock %}{% endblock head %}
 {% block title %}{% block head_title %}{% endblock %}{% endblock title %}
 {% block main %}
