--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,14 +1,14 @@
-{% extends "account/base.html" %}
+{% extends 'account/base.html' %}
 
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}{% trans 'Sign In' %}{% endblock %}
 
 {% block content %}
 	<div class="m-3 m-lg-5">
 		<div class="text-center mt-4">
-			<h1 class="h3">{% trans "Sign In" %}</h1>
+			<h1 class="h3">{% trans 'Sign In' %}</h1>
 			<p class="text-black-50">
         {% blocktrans %}
           If you have not created an account yet, then please
@@ -26,11 +26,11 @@
 
       <div class="row mt-4">
         <div class="col d-flex align-items-center">
-          <a class="button secondaryAction text-muted text-light" href="{% url 'account_reset_password' %}"><small>{% trans "Forgot Password?" %}</small></a>
+          <a class="button secondaryAction text-muted text-light" href="{% url 'account_reset_password' %}"><small>{% trans 'Forgot Password?' %}</small></a>
         </div>
         <div class="col text-end">
-          <a class="btn btn-outline-primary rounded-pill py-2 px-5" href="{{ signup_url }}">{% trans "Sign Up" %}</a>
-          <button type="submit" class="btn btn-primary rounded-pill py-2 px-5">{% trans "Sign In" %}</button>
+          <a class="btn btn-outline-primary rounded-pill py-2 px-5" href="{{ signup_url }}">{% trans 'Sign Up' %}</a>
+          <button type="submit" class="btn btn-primary rounded-pill py-2 px-5">{% trans 'Sign In' %}</button>
         </div>
       </div>
     </form>
