--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,16 +1,16 @@
-{% extends "account/base.html" %}
+{% extends 'account/base.html' %}
 
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_title %}{% trans 'Change Password' %}{% endblock %}
 
 {% block content %}
 <div class="m-3 m-lg-5">
 	<div class="text-center mt-4">
-		<h1 class="h3">{% trans "Change Password" %}</h1>
+		<h1 class="h3">{% trans 'Change Password' %}</h1>
 		<p class="text-black-50">
-			<p>{% trans "Update your password below." %}</p>
+			<p>{% trans 'Update your password below.' %}</p>
 		</p>
 	</div>
 
@@ -20,10 +20,10 @@
 
 		<div class="row mt-4">
 			<div class="col d-flex align-items-center">
-				<a class="button secondaryAction text-muted text-light" href="{% url 'account_reset_password' %}"><small>{% trans "Forgot Password?" %}</small></a>
+				<a class="button secondaryAction text-muted text-light" href="{% url 'account_reset_password' %}"><small>{% trans 'Forgot Password?' %}</small></a>
 			</div>
 			<div class="col text-end">
-				<button type="submit" class="btn btn-primary rounded-pill py-2 px-5" name="action">{% trans "Change Password" %}</button>
+				<button type="submit" class="btn btn-primary rounded-pill py-2 px-5" name="action">{% trans 'Change Password' %}</button>
 			</div>
 		</div>
 	</form>
