--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,20 +1,20 @@
-{% extends "account/base.html" %}
+{% extends 'account/base.html' %}
 
 {% load i18n %}
 {% load account %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block head_title %}{% trans 'Password Reset' %}{% endblock %}
 
 {% block content %}
 <div class="m-3 m-lg-5">
 	<div class="text-center mt-4">
-		<h1 class="h3">{% trans "Password Reset" %}</h1>
+		<h1 class="h3">{% trans 'Password Reset' %}</h1>
 		{% if user.is_authenticated %}
-			{% include "account/snippets/already_logged_in.html" %}
+			{% include 'account/snippets/already_logged_in.html' %}
 		{% endif %}
 		<p class="text-black-50">
-			<p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+			<p>{% trans 'Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.' %}</p>
 		</p>
 	</div>
 
