--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,14 +1,14 @@
-{% extends "account/base.html" %}
+{% extends 'account/base.html' %}
 
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% trans "Set Password" %}{% endblock %}
+{% block head_title %}{% trans 'Set Password' %}{% endblock %}
 
 {% block content %}
 	<div class="m-3 m-lg-5">
 		<div class="text-center mt-4">
-			<h1 class="h3">{% trans "Set Password" %}</h1>
+			<h1 class="h3">{% trans 'Set Password' %}</h1>
 			<p class="text-black-50">
 				{% blocktrans %}Set a new password below{% endblocktrans %}
 			</p>
