--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,13 +1,13 @@
-{% extends "account/base.html" %}
+{% extends 'account/base.html' %}
 {% load crispy_forms_tags %}
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block head_title %}{% trans 'Signup' %}{% endblock %}
 
 {% block content %}
 <div class="m-3 m-lg-5">
 	<div class="text-center mt-4">
-		<h1 class="h3">{% trans "Sign Up" %}</h1>
+		<h1 class="h3">{% trans 'Sign Up' %}</h1>
 		<p class="text-black-50">
 			{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
 		</p>
@@ -22,7 +22,7 @@
 		<div class="row mt-4">
       {% trans 'by registering on the site you accept and agree to the processing of personal data' %}
 			<div class="col text-end">
-				<button type="submit" class="btn btn-primary rounded-pill py-2 px-5">{% trans "Sign Up" %}</button>
+				<button type="submit" class="btn btn-primary rounded-pill py-2 px-5">{% trans 'Sign Up' %}</button>
 			</div>
 		</div>
 	</form>
