--- a/templates/account/verified_email_required.html
+++ b/templates/account/verified_email_required.html
@@ -1,11 +1,11 @@
-{% extends "account/base.html" %}
+{% extends 'account/base.html' %}
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block head_title %}{% trans 'Verify Your E-mail Address' %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Verify Your E-mail Address" %}</h1>
+<h1>{% trans 'Verify Your E-mail Address' %}</h1>
 
 {% url 'account_email' as email_url %}
 
@@ -21,7 +21,7 @@ contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 
 <div class="m-3 m-lg-5">
 	<div class="text-center mt-4">
-		<h1 class="h3">{% trans "Verify Your E-mail Address" %}</h1>
+		<h1 class="h3">{% trans 'Verify Your E-mail Address' %}</h1>
 		<div class="m-3">
 			{% url 'account_email' as email_url %}
 		</div>
@@ -35,7 +35,7 @@ contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 			verification. Please click on the link inside this e-mail. Please
 			contact us if you do not receive it within a few minutes.{% endblocktrans %}
 		</p>
-		<a class="btn btn-outline-primary rounded-pill mt-3 py-2 px-5" href="{{ email_url }}">{% trans "Update your e-mail address" %}</a>
+		<a class="btn btn-outline-primary rounded-pill mt-3 py-2 px-5" href="{{ email_url }}">{% trans 'Update your e-mail address' %}</a>
 	</div>
 </div>
 {% endblock %}
