--- a/templates/claims/create.html
+++ b/templates/claims/create.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans 'Create claim' %}{% endblock title %}
 {% block main %}
   {{ block.super }}
-  <form method="POST" class="bg-white" action="{% url 'claims:create' answer_id=request.resolver_match.kwargs.answer_id %}">
+  <form method="POST" class="bg-white rounded-2" action="{% url 'claims:create' answer_id=request.resolver_match.kwargs.answer_id %}">
     {% csrf_token %}
     {{ form|crispy }}
     <input type="submit" class="btn btn-primary" value="{% trans 'Create claim' %}">
