--- a/templates/questions/list.html
+++ b/templates/questions/list.html
@@ -1,8 +1,8 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block title %}{% trans "Questions" %}{% endblock title %}
+{% block title %}{% trans 'Questions' %}{% endblock title %}
 {% block beforemain %}
   {{ block.super }}
   {% include '_countries.html' with url_name='questions:index' %}
