--- a/templates/rules/list.html
+++ b/templates/rules/list.html
@@ -1,21 +1,21 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 {% load i18n %}
 
-{% block title %}{% trans "Rules" %}{% endblock title %}
+{% block title %}{% trans 'Rules' %}{% endblock title %}
 {% block main %}
   {{ block.super }}
 
-  <div class="bg-white">
-  <ol type="1">
-    {% for rule in object_list %}
-      <li>{{ rule }}</li>
-    {% endfor %}
-  </ol>
+  <div class="bg-white rounded-2">
+    <ol type="1">
+      {% for rule in object_list %}
+        <li>{{ rule }}</li>
+      {% endfor %}
+    </ol>
 
-  {% if request.user.is_authenticated and not request.user.is_user_agreement_accepted %}
-    <a href="{% url 'rules:accept_agreement' %}" class="btn btn-primary">
-      {% trans 'Accept site rules' %}
-    </a>
-  {% endif %}
+    {% if request.user.is_authenticated and not request.user.is_user_agreement_accepted %}
+      <a href="{% url 'rules:accept_agreement' %}" class="btn btn-primary">
+        {% trans 'Accept site rules' %}
+      </a>
+    {% endif %}
   </div>
 {% endblock main %}
