--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <link rel="stylesheet" href="{% static 'styles.css' %}">
       {% endblock style %}
+
+      <script async src="https://cdn.jsdelivr.net/npm/underscore@stable/underscore-umd-min.js"></script>
     {% endblock head %}
   </head>
 
