--- a/templates/questions/edit.html
+++ b/templates/questions/edit.html
@@ -9,13 +9,16 @@
 {% endblock beforemain %}
 {% block main %}
   {{ block.super }}
-  <form method="POST" class="bg-white rounded-2" action="{% url 'questions:edit' country_id=request.resolver_match.kwargs.country_id pk=request.resolver_match.kwargs.pk %}">
+  {% include 'questions/_detailed_question.html' %}
+
+  <form method="POST" class="bg-white rounded-2" style="padding: 20px" action="{% url 'questions:edit' country_id=request.resolver_match.kwargs.country_id pk=request.resolver_match.kwargs.pk %}">
     {% csrf_token %}
     {{ form|crispy }}
     <input type="submit" class="btn btn-primary" value="{% trans 'Save' %}">
-    <input name="translate" type="submit" class="btn btn-secondary" value="{% trans 'Translate' %}">
     <a href="{% url 'questions:publish' country_id=request.resolver_match.kwargs.country_id pk=request.resolver_match.kwargs.pk %}" class="btn btn-outline-primary">
       {% trans 'Send to moderation' %}
     </a>
+
+    {% include 'questions/_translate_preview.html' %}
   </form>
 {% endblock main %}
