--- a/templates/answers/list.html
+++ b/templates/answers/list.html
@@ -8,96 +8,45 @@
 {% block title %}{% trans 'Answers' %}{% endblock title %}
 {% block beforemain %}
   {{ block.super }}
-
-  {% with 'questions:index' as back_url %}
-    <a href="javascript:history.back()" class="bg-white border-0 d-flex align-items-center" style="color: red; font-size: 16px; width: 1018px; padding: 0 0 0 69px; margin: 0 16px 16px;height: 45px">
-      &lt; {% trans 'Back' %}
-    </a>
-  {% endwith %}
+  {% include '_back_button.html' %}
 {% endblock beforemain %}
 {% block main %}
   {{ block.super }}
 
-  <div class="bg-white rounded-2" style="padding: 7px 0;margin-bottom: 3px">
   {% if question %}
-    {# TODO: Split with sub templates #}
-    <div style="border-bottom: 1px solid #636364; padding: 0 32px 15px 69px;">
-      <header style="margin-bottom: 15px; font-size: 32px; line-height: 24px">{{ question.truncated_en_text }}</header>
-      <span style="margin-bottom: 15px; font-size: 19px; line-height: 18px">{{ question.en_text }}</span>
-    </div>
+    {% include 'questions/_detailed_question.html' %}
+  {% endif %}
 
-    <div class="d-flex align-items-center" style="font-size: 20px; height: 50px; gap: 14px; margin: 0 32px 0 17px;">
-      <a href="{% url 'likes:toggle_subscription' country_id=question.country_id question_id=question.id %}">
-        <img height="33" alt="toggle subscription" src="
-          {% if question|subscribed:request.user %}
-            {% static 'icons/star-filled.png' %}
-          {% else %}
-            {% static 'icons/star.png' %}
-          {% endif %}"
-        />
+  <div class="bg-white rounded-2" style="padding: 7px 0;margin-bottom: 3px">
+    {% for answer in object_list %}
+      <div class="d-flex flex-column bg-white rounded-2 position-relative" style="padding: 7px 0 20px 17px;">
+
+        <div class="d-flex {% if question.status != 'closed' %}position-absolute{% endif %}">
+          {% include 'answers/_answer.html' %}
+        </div>
+
+        <div style="margin-left: 52px">
+          {{ answer.truncated_en_text }}
+        </div>
+
+        <div style="margin-left: 52px; margin-top: 17px">
+          <a class="text-decoration-none" href="{% url 'answers:detail' pk=answer.id question_id=answer.question_id country_id=answer.question.country_id %}">
+            {% trans 'Full answer' %}
+          </a>
+        </div>
+
+        <div style="margin: 17px 0 0 52px">
+          {% include 'likes/_for_answer.html' %}
+        </div>
+      </div>
+    {% endfor %}
+
+    {% if question.author != request.user and question.status == 'published' and question|is_not_answered_by_me:request.user %}
+      <a style="display: inline-block; width: 130px; text-align: center; text-decoration: none; line-height: 34px; color: white; border-radius: 5px; background: #2659C2"
+         href="{% url 'answers:create' question_id=question.id country_id=question.country_id %}"
+      >
+        {% trans 'Add new answer' %}
       </a>
-      {{ question.country }} <img height="33" alt="currency" src="{% static question.price.currency|currency_icon %}" /> {{ question.price.amount }}
-
-      {% if question.status != 'closed' %}
-        <span class="d-flex align-items-center text-{{ question|question_status_class }}" style="gap: 14px">
-          <img height="33" alt="{{ question.status }}" src="{% static question|question_status_icon %}" />
-          {{ question.get_status_display }}
-        </span>
-      {% endif %}
-
-      {% if question.status in 'answered closed'|split %}
-        <img height="33" alt="answers" src="{% static 'icons/comment.png' %}" /> {{ question.answer_set.count }} {% trans 'Answers' %}
-      {% endif %}
-
-      {% include 'users/_avatar.html' with user=question.author %}
-      {{ question.author.username }}
-
-      <span class="text-secondary ms-auto">
-        {% if question.status in 'approved published answered'|split %}
-          {{ question.status_changed|timesince }}
-        {% else %}
-          {{ question.get_status_display }}
-        {% endif %}
-      </span>
-      </div>
-    </div>
-
-    {% if question.status in 'rejected deferred'|split and question.reason %}
-      <div class="bg-white rounded-2" style="margin-bottom: 3px; padding: 7px 0 7px 17px">
-        {{ question.reason }}
-      </div>
     {% endif %}
-  {% endif %}
-
-  {% for answer in object_list %}
-    <div class="d-flex flex-column bg-white rounded-2 position-relative" style="padding: 7px 0 20px 17px;">
-
-      <div class="d-flex {% if question.status != 'closed' %}position-absolute{% endif %}">
-        {% include 'answers/_answer.html' with answer=answer %}
-      </div>
-
-      <div style="margin-left: 52px">
-        {{ answer.truncated_en_text }}
-      </div>
-
-      <div style="margin-left: 52px; margin-top: 17px">
-        <a class="text-decoration-none" href="{% url 'answers:detail' pk=answer.id question_id=answer.question_id country_id=answer.question.country_id %}">
-          {% trans 'Full answer' %}
-        </a>
-      </div>
-
-      <div style="margin: 17px 0 0 52px">
-        {% include 'likes/_for_answer.html' with answer=answer %}
-      </div>
-    </div>
-  {% endfor %}
-
-  {% if question.author != request.user and question.status == 'published' and question|is_not_answered_by_me:request.user %}
-    <a style="display: inline-block; width: 130px; text-align: center; text-decoration: none; line-height: 34px; color: white; border-radius: 5px; background: #2659C2"
-       href="{% url 'answers:create' question_id=question.id country_id=question.country_id %}"
-    >
-      {% trans 'Add new answer' %}
-    </a>
-  {% endif %}
   </div>
 {% endblock main %}
