Fix russian text and remove cancel search button

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -11,7 +11,7 @@
       <input class="border-0" type="search" placeholder="{% trans 'Search' %}"
              style="font-size: 19px; background: #F4F4F7; color: #9C9A9C;height: 35px; width: 578px; border-radius: 10px; padding-left: 16px"
              aria-label="{% trans 'Search' %}">
-      <i class="bi bi-search" style="position: absolute; right: 16px; top: 8.5px; color: #9C9A9C"></i>
+      <i class="bi bi-search" style="position: absolute; right: 16px; top: 9.5px; line-height: 16px; color: #9C9A9C"></i>
     </form>
 
     {% block account_bar %}
