--- a/project/static/styles.css
+++ b/project/static/styles.css
@@ -17,3 +17,10 @@ body {
 * {
     font-family: 'Century Gothic', sans-serif;
 }
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
